<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juanjosegallego.practicamapas.datos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/municipio"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="5">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="6"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/municipio1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="12dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/municipio2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="12dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/municipio3"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="12dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/municipio4"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="12dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/municipio5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent">
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent">
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="6"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/municipio6"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="12dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/municipio7"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="12dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/municipio8"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="12dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/municipio9"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="12dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/municipio10"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="match_parent">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="305dp"
                android:layout_gravity="center"
                android:src="@drawable/general"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/mapa"/>

            <Button
                android:id="@+id/boton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>



