<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context="com.juanjosegallego.practicamapas.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/titulo"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <ImageView
        android:layout_width="2350dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/parque2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/titulo2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:text=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:text=""/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/titulo3"/>



</LinearLayout>
