<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juanjosegallego.practicamapas.spa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/fondo">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/fondo"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/spa"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

            <ImageView
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:src="@drawable/spa"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/spa1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/boton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>


